--- a/main.css
+++ b/main.css
@@ -21,15 +21,16 @@ section {
 	height: 100%;
 }
 section::after {
-	position: absolute;
+	position: right;
 	bottom: 0;
 	left: 0;
 	content: '';
 	width: 100%;
-	height: 80%;
+	height: 100%;
 	background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
 	background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
 }
+
 section h1 {
 	position: absolute;
 	top: 50%;
@@ -42,7 +43,9 @@ section h1 {
 	text-align: center;
 	white-space: nowrap;
 }
-
+#memes{
+	background: url("http://previews.123rf.com/images/sepavo/sepavo1404/sepavo140400024/27788060-Tokyo-Japan-at-the-Marunouchi-business-district-and-Tokyo-Station--Stock-Photo.jpg") center center / cover no-repeat;
+}
 #section01 { background: url(https://unsplash.it/1000/1000?image=846) center center / cover no-repeat;}
 #section02 { background: url(https://unsplash.it/1000/1000?image=809) center center / cover no-repeat;}
 #section03 { background: url(https://unsplash.it/1000/1000?image=829) center center / cover no-repeat;}
@@ -73,7 +76,7 @@ section h1 {
 	position: static;
 	-webkit-transform: translate(0, 0);
 	transform: translate(0, 0);
-	margin-bottom: 60px;
+	margin-;
 	color: #333;
 }
 #thanks p {
@@ -109,16 +112,16 @@ section h1 {
 
 
 #section01 a {
-	padding-top: 60px;
+	padding-top: 60px;/**/
 }
 #section01 a span {
 	position: absolute;
 	top: 0;
 	left: 50%;
-	width: 24px;
-	height: 24px;
-	margin-left: -12px;
-	border-left: 1px solid #fff;
+/*	width: 24px;
+	height: 24px;*/
+/*	margin-left: -12px;
+	border-left: 1px solid #fff;*/
 	border-bottom: 1px solid #fff;
 	-webkit-transform: rotate(-45deg);
 	transform: rotate(-45deg);
@@ -342,7 +345,7 @@ section h1 {
 	animation: sdb06 1.5s infinite;
 	box-sizing: border-box;
 }
-@-webkit-keyframes sdb06 {
+/*@-webkit-keyframes sdb06 {
 	0% {
 		-webkit-transform: rotateY(0) rotateZ(-45deg) translate(0, 0);
 		opacity: 0;
@@ -368,196 +371,4 @@ section h1 {
 		opacity: 0;
 	}
 }
-
-
-
-#section07 a {
-	padding-top: 80px;
-}
-#section07 a span {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 24px;
-	height: 24px;
-	margin-left: -12px;
-	border-left: 1px solid #fff;
-	border-bottom: 1px solid #fff;
-	-webkit-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-	-webkit-animation: sdb07 2s infinite;
-	animation: sdb07 2s infinite;
-	opacity: 0;
-	box-sizing: border-box;
-}
-#section07 a span:nth-of-type(1) {
-	-webkit-animation-delay: 0s;
-	animation-delay: 0s;
-}
-#section07 a span:nth-of-type(2) {
-	top: 16px;
-	-webkit-animation-delay: .15s;
-	animation-delay: .15s;
-}
-#section07 a span:nth-of-type(3) {
-	top: 32px;
-	-webkit-animation-delay: .3s;
-	animation-delay: .3s;
-}
-@-webkit-keyframes sdb07 {
-	0% {
-		opacity: 0;
-	}
-	50% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}
-}
-@keyframes sdb07 {
-	0% {
-		opacity: 0;
-	}
-	50% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}
-}
-
-
-
-#section08 a {
-	padding-top: 60px;
-}
-#section08 a span {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 30px;
-	height: 50px;
-	margin-left: -15px;
-	border: 2px solid #fff;
-	border-radius: 50px;
-	box-sizing: border-box;
-}
-#section08 a span::before {
-	position: absolute;
-	top: 10px;
-	left: 50%;
-	content: '';
-	width: 6px;
-	height: 6px;
-	margin-left: -3px;
-	background-color: #fff;
-	border-radius: 100%;
-	box-sizing: border-box;
-}
-
-
-
-#section09 a {
-	padding-top: 80px;
-}
-#section09 a span {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 30px;
-	height: 50px;
-	margin-left: -15px;
-	border: 2px solid #fff;
-	border-radius: 50px;
-	box-sizing: border-box;
-}
-#section09 a span::before {
-	position: absolute;
-	top: 10px;
-	left: 50%;
-	content: '';
-	width: 6px;
-	height: 6px;
-	margin-left: -3px;
-	background-color: #fff;
-	border-radius: 100%;
-	box-sizing: border-box;
-}
-#section09 a span::after {
-	position: absolute;
-	bottom: -18px;
-	left: 50%;
-	width: 18px;
-	height: 18px;
-	content: '';
-	margin-left: -9px;
-	border-left: 1px solid #fff;
-	border-bottom: 1px solid #fff;
-	-webkit-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-	box-sizing: border-box;
-}
-
-
-
-#section10 a {
-	padding-top: 60px;
-}
-#section10 a span {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 30px;
-	height: 50px;
-	margin-left: -15px;
-	border: 2px solid #fff;
-	border-radius: 50px;
-	box-sizing: border-box;
-}
-#section10 a span::before {
-	position: absolute;
-	top: 10px;
-	left: 50%;
-	content: '';
-	width: 6px;
-	height: 6px;
-	margin-left: -3px;
-	background-color: #fff;
-	border-radius: 100%;
-	-webkit-animation: sdb10 2s infinite;
-	animation: sdb10 2s infinite;
-	box-sizing: border-box;
-}
-@-webkit-keyframes sdb10 {
-	0% {
-		-webkit-transform: translate(0, 0);
-		opacity: 0;
-	}
-	40% {
-		opacity: 1;
-	}
-	80% {
-		-webkit-transform: translate(0, 20px);
-		opacity: 0;
-	}
-	100% {
-		opacity: 0;
-	}
-}
-@keyframes sdb10 {
-	0% {
-		transform: translate(0, 0);
-		opacity: 0;
-	}
-	40% {
-		opacity: 1;
-	}
-	80% {
-		transform: translate(0, 20px);
-		opacity: 0;
-	}
-	100% {
-		opacity: 0;
-	}
-}
+*/
