Pretty much done...

--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ section h1 {
 	white-space: nowrap;
 }
 #memes{
-	background: url("http://previews.123rf.com/images/sepavo/sepavo1404/sepavo140400024/27788060-Tokyo-Japan-at-the-Marunouchi-business-district-and-Tokyo-Station--Stock-Photo.jpg") center center / cover no-repeat;
+	background: url("http://az616578.vo.msecnd.net/files/2016/03/25/635945134397741857-1315553316_summer-photographer-pier-adventure.jpg") center center / cover no-repeat;
 }
 #section01 { background: url(https://unsplash.it/1000/1000?image=846) center center / cover no-repeat;}
 #section02 { background: url(https://unsplash.it/1000/1000?image=809) center center / cover no-repeat;}
